# trial

./: CMakeLists.txt  main.cpp
core/: render_object.cpp  render_object.hpp  renderer.hpp
core/pipelines/: base.hpp  base_obj.hpp  triangle.hpp  vertex.hpp
engine/core/: app.cpp  app.hpp  context.hpp  time.cpp  time.hpp
engine/input/: input.cpp  input.hpp
engine/object/: object.hpp
engine/renderer/: render_object.cpp  render_object.hpp  renderer.hpp  tile.cpp  tile.hpp
engine/renderer/pipelines/: base.hpp  base_obj.hpp  tile.hpp
engine/resource_manager/: .#resource_manager.cpp  audio_manager.cpp  audio_manager.hpp  font_manager.cpp  font_manager.hpp  resource_manager.cpp  resource_manager.hpp  texture_manager.cpp  texture_manager.hpp
engine/scene/: manager.cpp  manager.hpp  scene.cpp  scene.hpp
game/scenes/: test_scene.cpp  test_scene.hpp
shaders/tile/: frag.spv  tile.vert  vert.spv
shaders/vertex_buff/: render_obj.frag  render_obj.vert  vert.spv  vertex_buff.frag  vertex_buff.vert
src/: main.cpp
src/engine/core/: context.cpp  context.hpp  game.cpp  game.hpp  time.cpp  time.hpp
src/engine/render/: renderer.cpp  renderer.hpp
src/engine/render/pipeline/: graphics_pipeline.cpp  graphics_pipeline.hpp  triangle.cpp  triangle.hpp
